# polar-springs

./: .gitignore  CONFIG.md  Cargo.toml  LICENSE  README.md  config.toml  dog.md  justfile  s3.toml
benches/: benchmark.rs
examples/log_generator/: main.rs
src/: config.rs  lib.rs  main.rs  outputs.rs  runner.rs
src/configs/: input.rs  mod.rs  output.rs  parse.rs  schema.rs
test_files/: filter.csv  filter.toml  groupby.toml
tests/: adhoc_test.rs  expression_test.rs  integration_test.rs  readme_test.rs  test_filter.rs  test_utils.rs  window_test.rs
