[package]
name = "polars_cli"
version = "0.1.0"
edition = "2021"
default-run = "polars_cli"

[[bin]]
name = "polars_cli"
path = "src/main.rs"
[[bin]]
name = "file_schema"
path = "bin/file_schema.rs"
# This section defines the library
[lib]
name = "polars_cli"
path = "src/lib.rs"


[[example]]
name = "log_generator"


[dependencies]
polars-io = { version = "*", features = [
    "ipc_streaming",
    "csv",
    "json",
    "parquet",
    "ipc",
    "avro",
    "cloud",
    "aws",
    "gcp",
    "azure",
] }
csv = "1"
polars-core = "*"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0"
clap = { version = "4.5.35" }
clap_derive = { version = "4.0.0-rc.1" }
toml = "0.8.20"
polars = { version = "0.46.0", features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
chrono = { version = "*", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "ansi"] }

rand = "0.9"
rand_distr = "*"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "*"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
